add swagger doc and test for add config handler
