# server/admin.go
@@ -10,7 +10,7 @@ import (
 func adminRoutes(e *echo.Echo) {
 	e.POST("/admin/login", WithDBConnection(handlers.AdminLoginHandler))
 	e.POST("/admin/register", WithDBConnection(handlers.AdminRegisterHandler))
-	e.POST("/admin/add-config", handlers.AddConfigHandler, middlewares.IsAdmin)
+	e.POST("/admin/add-config", WithDBConnection(handlers.AddConfigHandler), middlewares.IsAdmin)
 	e.GET("/admin/sms-report", handlers.SmsReportHandler, middlewares.IsAdmin)
 	e.POST("/admin/add-bad-word/:word", handlers.AddBadWordHandler, middlewares.IsAdmin)
 	e.GET("/admin/search/:word", handlers.SmsSearchHandler, middlewares.IsAdmin)
